tests/baselines/reference/plainJSBinderErrors.errors.txt
tests/cases/conformance/salsa/plainJSBinderErrors.js(1,1): error TS2528: A module cannot have multiple default exports.
tests/cases/conformance/salsa/plainJSBinderErrors.js(2,1): error TS2528: A module cannot have multiple default exports.
tests/cases/conformance/salsa/plainJSBinderErrors.js(15,20): error TS1102: 'delete' cannot be called on an identifier in strict mode.
tests/cases/conformance/salsa/plainJSBinderErrors.js(18,16): error TS1102: 'delete' cannot be called on an identifier in strict mode.
tests/cases/conformance/salsa/plainJSBinderErrors.js(19,16): error TS1102: 'delete' cannot be called on an identifier in strict mode.
tests/cases/conformance/salsa/plainJSBinderErrors.js(22,15): error TS1210: Code contained in a class is evaluated in JavaScript's strict mode which does not allow this use of 'eval'. For more information, see https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode.
tests/cases/conformance/salsa/plainJSBinderErrors.js(23,15): error TS1210: Code contained in a class is evaluated in JavaScript's strict mode which does not allow this use of 'arguments'. For more information, see https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode.
tests/cases/conformance/salsa/plainJSBinderErrors.js(26,27): error TS1121: Octal literals are not allowed. Use the syntax '0o10'.
tests/cases/conformance/salsa/plainJSBinderErrors.js(27,9): error TS1101: 'with' statements are not allowed in strict mode.
tests/cases/conformance/salsa/plainJSBinderErrors.js(33,13): error TS1344: 'A label is not allowed here.
tests/cases/conformance/salsa/plainJSBinderErrors.js(39,7): error TS1215: Invalid use of 'eval'. Modules are automatically in strict mode.
tests/cases/conformance/salsa/plainJSBinderErrors.js(40,7): error TS1215: Invalid use of 'arguments'. Modules are automatically in strict mode.


==== tests/cases/conformance/salsa/plainJSBinderErrors.js (12 errors) ====
    export default 12
    ~~~~~~~~~~~~~~~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2753 tests/cases/conformance/salsa/plainJSBinderErrors.js:2:1: Another export default is here.
    export default 13
    ~~~~~~~~~~~~~~~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 tests/cases/conformance/salsa/plainJSBinderErrors.js:1:1: The first export default is here.
    const await = 1
    const yield = 2
    async function f() {
        const await = 3
    }
    function* g() {
        const yield = 4
    }
    class C {
        #constructor = 5
        deleted() {
            function container(f) {
                delete f
                       ~
!!! error TS1102: 'delete' cannot be called on an identifier in strict mode.
            }
            var g = 6
            delete g
                   ~
!!! error TS1102: 'delete' cannot be called on an identifier in strict mode.
            delete container
                   ~~~~~~~~~
!!! error TS1102: 'delete' cannot be called on an identifier in strict mode.
        }
        evalArguments() {
            const eval = 7
                  ~~~~
!!! error TS1210: Code contained in a class is evaluated in JavaScript's strict mode which does not allow this use of 'eval'. For more information, see https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode.
            const arguments = 8
                  ~~~~~~~~~
!!! error TS1210: Code contained in a class is evaluated in JavaScript's strict mode which does not allow this use of 'arguments'. For more information, see https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode.
        }
        withOctal() {
            const redundant = 010
                              ~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o10'.
            with (redundant) {
            ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
                return toFixed()
            }
        }
        label() {
            for(;;) {
                label: var x = 1
                ~~~~~
!!! error TS1344: 'A label is not allowed here.
                break label
            }
            return x
        }
    }
    const eval = 9
          ~~~~
!!! error TS1215: Invalid use of 'eval'. Modules are automatically in strict mode.
    const arguments = 10
          ~~~~~~~~~
!!! error TS1215: Invalid use of 'arguments'. Modules are automatically in strict mode.
    